--- a/assets/style/scss/pages/home/sections/_portfolio.scss
+++ b/assets/style/scss/pages/home/sections/_portfolio.scss
@@ -58,7 +58,6 @@
       margin-right: 20px;
       border-radius: 6px;
       position: relative;
-      border: 1px solid black;
       img {
         width: 100% !important;
         border-radius: 6px;
@@ -102,6 +101,7 @@
       font-weight: 700;
       border: 1px solid rgba(255, 255, 255, 0.295743);
       border-radius: 6px;
+      margin-top: 40px;
     }
   }
 }
