--- a/views/home.html
+++ b/views/home.html
@@ -173,7 +173,7 @@
     <section class="app__main__features">
       <div class="container">
         <div class="row">
-          <div class="col-6 col-md-12" style="padding: 40px">
+          <div class="col-6 col-md-12 features__content">
             <div class="app__main__features__subtitle">
               <div class="app__main__features__subtitle__item">
                 How We Work
@@ -196,7 +196,7 @@
               </button>
             </div>
           </div>
-          <div class="col-6 col-md-12">
+          <div class="col-6 col-md-12 features-wrap">
             <div class="app__main__features__items">
               <div class="app__main__features__items__item">
                 <div class="app__main__features__items__item__count">
@@ -276,14 +276,16 @@
               <a href="#">Read More</a>
             </div>
             <div class="boxes">
-              <div class="box box-white">
-                <i class="fa-solid fa-ruler-combined icon--large"></i>
-                <h6>Professional</h6>
-                <p>Full service range including technical skills, design.</p>
-              </div>
-              <div class="box box-transparent">
-                <h6>Accessibility</h6>
-                <p>Business understanding, ability to put themselves.</p>
+              <div class="row">
+                <div class="box box-white col-md-12">
+                  <i class="fa-solid fa-ruler-combined icon--large"></i>
+                  <h6>Professional</h6>
+                  <p>Full service range including technical skills, design.</p>
+                </div>
+                <div class="box box-transparent col-md-12">
+                  <h6>Accessibility</h6>
+                  <p>Business understanding, ability to put themselves.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -459,7 +461,7 @@
               </div>
             </div>
             <div class="app__main__portfolio__btn">
-              <button>Exploore More</button>
+              <button>Explore More</button>
             </div>
           </div>
         </div>
