--- a/assets/style/scss/pages/home/sections/_banner.scss
+++ b/assets/style/scss/pages/home/sections/_banner.scss
@@ -1,6 +1,7 @@
 .app__main__banner {
   background-color: #32334c;
   padding-bottom: 20px;
+  padding-top: 117px;
   &__content {
     position: relative;
     border-radius: 6px;
@@ -9,6 +10,9 @@
       display: flex;
       justify-content: flex-end;
       padding: 20px;
+      @include for-tablet-landscape-up{
+        padding-bottom: 0;
+      }
       &__inner {
         padding: 0 40px;
         display: flex;
@@ -58,6 +62,10 @@
       img {
         align-self: center;
         justify-self: center;
+        @include for-tablet-landscape-up{
+          width: 100%;
+          height: 100%;
+        }
       }
     }
     &__icon {
@@ -82,8 +90,5 @@
   }
   .app__main__banner__content__block {
     justify-content: center;
-    img{
-      width: 100%;
-    }
   }
 }
