--- a/views/services.html
+++ b/views/services.html
@@ -20,9 +20,11 @@
         <div class="container">
           <div class="row">
             <div class="col-3">
-              <div class="app__header__logo">
-                <img src="../assets/images/logo.png" alt="" />
-              </div>
+              <a href="home.html">
+                <div class="app__header__logo">
+                  <img src="../assets/images/logo.png" alt="" />
+                </div>
+              </a>
             </div>
             <div class="col-6">
               <ul class="app__header__links">
@@ -53,7 +55,9 @@
         <div class="container">
           <div class="row">
             <div class="col-6">
-              <img src="../assets/images/logo.png" alt="" />
+              <a href="home.html">
+                <img src="../assets/images/logo.png" alt="" />
+              </a>
             </div>
             <div class="col-6">
               <div class="burger">
