--- a/views/home.html
+++ b/views/home.html
@@ -491,7 +491,7 @@
             <div class="col-4 col-md-12 app__main__banner__content__block">
               <img src="../assets/images/img7.png" alt="" />
             </div>
-            <div class="col-4 col-md-12 app__main__banner__content__block">
+            <div class="col-4 col-md-12 app__main__banner__content__block banner__person">
               <img src="../assets/images/img8.png" alt="" />
             </div>
             <div class="app__main__banner__content__icon">
