--- a/views/services.html
+++ b/views/services.html
@@ -71,11 +71,71 @@
             </div>
         </section>
         <section id="services__services">
-            <div class="info">
-                
+            <div class="container">
+                <div class="info">
+                    <div class="row">
+                        <div class="col-6 col-md-12">
+                            <span class="section--category">Services</span>
+                            <h2 class="section--heading">Digital agency is a business you hire to outsource your digital marketing efforts</h2>
+                        </div>
+                        <div class="col-6 col-md-12 text">
+                            <p class="section--paragraph">Ability to put themselves in the merchant's shoes. It is
+                                 meant to partner on the long run, and work as an extension of the merchant's team
+                            </p>
+                            <p class="section--paragraph"> A digital agency is a business you hire to outsource your
+                                digital marketing efforts, instead of handling in-house. They can provide your 
+                                business with a variety of digital solutions to promote your product or service 
+                                online and help you.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion">
+                    
+                    <hr>
+                    <div class="accordion-item">
+                        <div class="heading">
+                            <i class="fa-solid fa-chalkboard icon--large--services"></i>
+                            <h4>Design</h4>
+                        </div>
+                        <i class="fa-solid fa-circle-chevron-up"></i>
+                    </div>
+                    <hr>
+                    <div class="accordion-body row">
+                        <div class="col-6 col-md-12">
+                            <h4>Agency is a business you hire to outsource your digital marketing efforts</h4>
+                            <p class="section--paragraph">Business you hire to outsource your digital marketing efforts, instead of 
+                                handling in-house. They can provide your business with a variety of digital
+                                solutions to promote your product or service online and help you.
+                            </p>
+                            <ul>
+                                <li><i class="fa-solid fa-check icon--small"></i> Web Development</li>
+                                <li><i class="fa-solid fa-check icon--small"></i> Brand Strategy</li>
+                                <li><i class="fa-solid fa-check icon--small"></i> Art Direction</li>
+                              </ul>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="accordion-item">
+                        <div class="heading">
+                            <i class="fa-solid fa-suitcase icon--large--services"></i>
+                            <h4>Development</h4>
+                        </div>
+                        <i class="fa-solid fa-circle-chevron-down"></i>
+                    </div>
+                    <hr>
+                    <div class="accordion-item">
+                        <div class="heading">
+                            <i class="fa-solid fa-gear icon--large--services"></i>
+                            <h4>Marketing</h4>
+                        </div>
+                        <i class="fa-solid fa-circle-chevron-down"></i>
+                    </div>
+                    <hr>
+                </div>
             </div>
-
         </section>
+
       </main>
       <footer class="footer">
         <div class="container">
