--- a/assets/style/scss/pages/home/sections/_give-new-look.scss
+++ b/assets/style/scss/pages/home/sections/_give-new-look.scss
@@ -74,6 +74,9 @@
         border: 1px solid $hr-bgc;
         padding: 10% 5% 5% 7%;
         width: 50%;
+        @include for-tablet-landscape-up {
+          width: 100%;
+        }
         h6 {
           color: $text-dark;
           font-weight: 700;
@@ -95,6 +98,9 @@
       }
       .box-transparent {
         margin-top: 10%;
+        @include for-tablet-landscape-up {
+          margin-top: 0;
+        }
       }
     }
   }
