--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2023,3 +2023,13 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       #contact-promotion .promotion-wrapper .image-wrapper img {
         width: 100%;
         height: 100%; }
+
+.faqs__contact {
+  padding-bottom: 1px; }
+
+.hr__contact {
+  margin-top: 127px; }
+
+@media (max-width: 576px) {
+  .get-in-touch__contact #map_wrapper .get-in-touch__form {
+    margin-top: 64px !important; } }
