--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
     rel="stylesheet" />
   <!-- Main Css Link -->
   <link rel="stylesheet" href="../assets/style/css/main.css" />
-  <title>Figma Template</title>
+  <title>Figma Template | Home</title>
 </head>
 
 <body>
