--- a/assets/style/scss/pages/services/_index.scss
+++ b/assets/style/scss/pages/services/_index.scss
@@ -1,6 +1,6 @@
 #services__services {
   background-color: $section-bgc;
-  padding-top: 8%;
+  padding: 8% 0 8%;
   .info {
     padding-bottom: 3%;
     h2 {
