--- a/views/services.html
+++ b/views/services.html
@@ -199,8 +199,35 @@
                     </div>
                   </div>
                 </div>
-                <hr class="hr" />
               </div>
+          </section>
+          <section id="contact-promotion">
+            <div class="container">
+              <div class="row">
+                <div class="col-12">
+                  <div class="promotion-wrapper">
+                    <div class="row contact-row">
+                      <div class="col-6 col-md-12 content-wrapper">
+                       <div class="contact-content">
+                        <h2>We’re Help
+                          To Build Your
+                          Dream Project
+                        </h2>
+                        <p>A digital agency is a business you hire to outsource your digital marketing efforts, instead of
+                          handling in-house.</p>
+                          <button type="button" class="btn--secondary">Contact Us</button>
+                       </div>
+                      </div>
+                      <div class="col-6 col-md-12 contact-image">
+                        <div class="image-wrapper">
+                          <img src="../assets/media/piccontact-promotion.png" alt="promotion">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
       </main>
       <footer class="footer">
