--- a/views/home.html
+++ b/views/home.html
@@ -31,7 +31,7 @@
         <div class="col-6">
           <ul class="app__header__links">
             <li class="app__header__links__item">
-              <a href="#">About</a>
+              <a href="#go-to-about">About</a>
             </li>
 
             <li class="app__header__links__item">
@@ -43,7 +43,7 @@
             </li>
 
             <li class="app__header__links__item">
-              <a href="#">Blog</a>
+              <a href="#go-to-blog"">Blog</a>
             </li>
           </ul>
         </div>
@@ -170,7 +170,7 @@
             </div>
           </div>
     </section>
-    <section class="app__main__features">
+    <section class="app__main__features"  id="go-to-about">
       <div class="container">
         <div class="row">
           <div class="col-6 col-md-12 features__content">
@@ -1052,7 +1052,7 @@
         </div>
       </div>
     </section>
-    <section class="app__main__blogs">
+    <section class="app__main__blogs" id="go-to-blog">
       <div class="container">
         <div class="app__main__blogs__header">
           <div class="app__main__blogs__header__subtitle">
