service title changed

--- a/views/services.html
+++ b/views/services.html
@@ -13,7 +13,7 @@
         rel="stylesheet" />
     <!-- Main Css Link -->
     <link rel="stylesheet" href="../assets/style/css/main.css" />
-    <title>Services</title>
+    <title>Figma Template | Services</title>
 </head>
 <body>
     <header class="app__header app__header__desktop">
