contact page bugfix

--- a/views/contact.html
+++ b/views/contact.html
@@ -14,7 +14,7 @@
     rel="stylesheet" />
   <!-- Main Css Link -->
   <link rel="stylesheet" href="../assets/style/css/main.css">
-  <title>Figma Template | Contact</title>
+  <title>Figma Template | Contact . </title>
 </head>
 
 <body>
